--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,22 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
+  <ion-navbar color:"primary">
+    <ion-title align:"centre">
+      TO-DO App
     </ion-title>
+</button>
+<ion-button end>
+    <button  ion-button icon-only (click)="additem()">
+        <ion-icon name="addcircle"></ion-icon>
+      
+</ion-button>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  To do App
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-list>
+  <ion-item *ngFor"let items of item" (click)="viewItem(item)">{
+    {item.title}}
+  </ion-item>
+</ion-list>
+
 </ion-content>
