new page created for item details

--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -6,13 +6,18 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>itemDetails</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-content>
+      {{description}}
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
