item details page created,and  view did load fnctn created

--- a/src/pages/add-items/add-items.html
+++ b/src/pages/add-items/add-items.html
@@ -1,35 +1,31 @@
-
-
-
 <ion-header>
 
 
 
-  <ion-toolbar color="primary"></ion-toolbar>
-  <ion-title>addItems</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>addItems</ion-title>
 
-  <ion-buttons end>
-    <button ion-button icon-only (click)="close()">
-      <ion-icon name="close"></ion-icon>
-    </button>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="close()">
+        <ion-icon name="close"></ion-icon>
+      </button>
     </ion-buttons>
-    </ion-header>
-
- 
-
-    <ion-content>
-    <ion-list>
-      <ion-item>
-        <ion-label Floating>title</ion-label>
-        <ion-input type="text"[(ngModel)]="title"></ion-input>
-      </ion-item>
-      <ion-item>
-          <ion-label Floating>Description</ion-label>
-          <ion-input type="text"[(ngModel)]="description"></ion-input>
-        </ion-item>
-      
-      </ion-list>
-      <button full ion-button color="primary" (click)="saveItem()"></button>
-      </ion-content>
+  </ion-toolbar>
+</ion-header>
 
 
+
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label Floating>title</ion-label>
+      <ion-input type="text" [(ngModel)]="title"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label Floating>Description</ion-label>
+      <ion-input type="text" [(ngModel)]="description"></ion-input>
+    </ion-item>
+
+  </ion-list>
+  <button full ion-button color="primary" (click)="saveItem()">save</button>
+</ion-content>
